--- a/package.json
+++ b/package.json
@@ -19,7 +19,16 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@fortawesome/angular-fontawesome": "^0.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-brands-svg-icons": "^5.12.0",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "bootstrap": "^4.4.1",
+    "lodash": "^4.17.15",
+    "lodash-decorators": "^6.0.1",
+    "lunr": "^2.3.8",
     "rxjs": "~6.4.0",
+    "short-unique-id": "^1.1.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
