--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-brands-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "angular-cli-ghpages": "^0.6.2",
     "bootstrap": "^4.4.1",
     "lodash": "^4.17.15",
     "lodash-decorators": "^6.0.1",
